--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     <title>Bourbon Finance</title>
     <meta
       name="description"
-      content="Cheaper and faster than Uniswap? Discover Bourbon Finance, a DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for EGG."
+      content="Cheaper and faster than Uniswap? Discover Bourbon Finance, a DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for BRRL."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="twitter:image" content="https://bourbondefi.com/images/egg/hero.png" />
     <meta
       name="twitter:description"
-      content="Earn BRRL through yield farming or win it in the Lottery, then stake it in Distilleries to earn more tokens! Initial Farm Offerings (new token launch model pioneered by Goose Finance), NFTs, and more, on a platform you can trust."
+      content="Earn BRRL through yield farming or win it in the Lottery, then stake it in Distilleries to earn more tokens! Initial Farm Offerings (new token launch model pioneered by Bourbon Finance), NFTs, and more, on a platform you can trust."
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Bourbon Finance - A DeFi exchange on Binance Smart Chain (BSC)" />
